# GLMViz

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config  cpackconf  install  make_pkg  meson.build  meson_install  meson_options.txt
debian/: changelog  control  copyright  install  rules
examples/: README.md  config-hybrid  config-minimal  config-osc  config-stereo
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Config_Monitor.cpp  Config_Monitor.hpp  EGL.cpp  EGL.hpp  FFT.cpp  FFT.hpp  FFT_example.cpp  Fifo.cpp  Fifo.hpp  GLMViz.cpp  GLMViz.hpp  GLViz.cpp  GLViz.hpp  GLXwindow.cpp  GLXwindow.hpp  GL_utils.cpp  GL_utils.hpp  Inotify.cpp  Inotify.hpp  Input.cpp  Input.hpp  Module_Config.hpp  Multisampler.hpp  Oscilloscope.cpp  Oscilloscope.hpp  Program.cpp  Program.hpp  Pulse.cpp  Pulse.hpp  Pulse_Async.cpp  Pulse_Async.hpp  Shader.cpp  Shader.hpp  Spectrum.cpp  Spectrum.hpp  (+8 more)
src/shader/: bar.gs  bar.vert  bar.vs  bar_pre.vert  bar_pre.vs  lines.vert  lines.vs  osc.frag  osc.geom  osc.vert  rainbow.frag  simple.frag  smooth_lines.geom
src/tests/: buffertest.cpp  meson.build
